Fixed alignment

--- a/css/account.css
+++ b/css/account.css
@@ -101,5 +101,5 @@ accountButton:hover {
     }
 }
 body{
-    padding-bottom: 70px;
+    padding: 70px;
 }
