--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,9 @@ body{
   font-family: 'Open Sans', sans-serif;
   font-size: 1.6rem;
   color: var(--dark-color);
+  margin: 0;
 }
+
 
 a{
   text-decoration: none;
@@ -95,7 +97,8 @@ section{
   width: 100%;
   height: 10rem;
   display: flex;
-  align-items: center;
+  align-items: center
+;
   position: fixed;
   top: 0;
   left: 0;
